@@ -21,6 +21,7 @@ Verilator 4.215 devel
 * Improve --thread verilation-time performance.
 * Fix array method names with parenthesis (#3181) (#3183). [Teng Huang]
 * Fix split_var assign merging (#3177) (#3179). [Yutetsu TAKATSUKASA]
+* Fix $display of signed/unsigned without format (#3207). [Julie Schwartz]
 * Fix nested generate if genblk naming (#3189). [yanx21]
 * Fix display of empty string constant (#3207). [Julie Schwartz]
 * Fix %0 format on $value$plusargs.
